# Threat-BackEnd

./: .twitter_keys.yaml  README.md  heroku.yml  new_donk_enby_tweets.csv  package-lock.json  pyproject.toml  requirements.txt  temp.csv  test_api.py  test_views.py  tests.py  tweet_dumper.py
api/: api_call.py  test_data.py
nlp_model/: app.py  model.py
simple_server/: docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  temp.csv  vectorizer_pickle.pkl
simple_server/simple_server/: asgi.py  settings.py  tweet_dumper.py  urls.py  views.py  wsgi.py
web-scraper/: scraper.py
