[tool.poetry]
name = "threat-backend"
version = "0.1.0"
description = ""
authors = ["TAYLOR JOHNSON <TAYLOR.MCMINN@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
twitter = "^1.18.0"
nltk = "^3.5"
searchtweets-v2 = "^1.0.4"
tweepy = "^3.10.0"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
